--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,8 +1,8 @@
 {
-  "singleQuote": true,
+  "printWidth": 80,
   "semi": true,
-  "useTabs": false,
+  "singleQuote": true,
   "tabWidth": 2,
   "trailingComma": "all",
-  "printWidth": 80
+  "useTabs": false
 }
